cmake_minimum_required(VERSION 3.10)

project(LinuxSysMonitor LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
find_package(Curses REQUIRED)
include_directories(${CURSES_INCLUDE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/src)
add_executable(process-monitor src/Main.cpp src/ProcParser.cpp src/HelperFunc.cpp src/DataControl.cpp) 
target_link_libraries(process-monitor ${CURSES_LIBRARIES})
target_include_directories(process-monitor PUBLIC "${PROJECT_BINARY_DIR}/src/")